# nicegui-pytest

./: .gitignore  README.md  conftest.py  pyproject.toml
src/nicegui_pytest/: __init__.py  views.py
src/tests/: conftest.py  test_views.py
